--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.16.0",
     "eslint-plugin-react": "^7.6.0",
+    "gh-pages": "^2.0.0",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2"
   }
